--- a/MicroRabbit/MicroRabbit.Infra.Ioc/MicroRabbit.Infra.Ioc.csproj
+++ b/MicroRabbit/MicroRabbit.Infra.Ioc/MicroRabbit.Infra.Ioc.csproj
@@ -9,6 +9,8 @@
     <ProjectReference Include="..\MicroRabbit.Banking.Data\MicroRabbit.Banking.Data.csproj" />
     <ProjectReference Include="..\MicroRabbit.Domain.Core\MicroRabbit.Domain.Core.csproj" />
     <ProjectReference Include="..\MicroRabbit.Infrastructure.Bus\MicroRabbit.Infrastructure.Bus.csproj" />
+    <ProjectReference Include="..\MicroRabbit.Tranfer.Application\MicroRabbit.Transfer.Application.csproj" />
+    <ProjectReference Include="..\MicroRabbit.Tranfer.Data\MicroRabbit.Transfer.Data.csproj" />
   </ItemGroup>
 
 </Project>
